[gd_scene load_steps=4 format=3 uid="uid://be1joxrc38num"]

[ext_resource type="PackedScene" uid="uid://bxsla0a4rcmlb" path="res://src/stages/game/dyad_game/ui/prompt/animated_prompt.tscn" id="1_ak283"]
[ext_resource type="Script" path="res://src/menus/instructions_scene/instructions_scene.gd" id="1_dshkp"]
[ext_resource type="PackedScene" uid="uid://cxeceweo8851j" path="res://src/stages/game/dyad_game/ui/player/animated_answer.tscn" id="2_hci0m"]

[node name="InstructionsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dshkp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Display" type="PanelContainer" parent="PanelContainer"]
layout_mode = 2
theme_type_variation = &"SimplePanel"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Display"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Display/MarginContainer"]
layout_mode = 2

[node name="Pages" type="MarginContainer" parent="PanelContainer/Display/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Page1" type="VBoxContainer" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page1"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Press the correct Button to get a point

"

[node name="Label2" type="Label" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page1"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2
theme_override_constants/line_spacing = 12
text = "To get points, both players in a team must press the correct direction when the prompt appears.
Press the correct button on the D-Pad or the correct key from WASD."
autowrap_mode = 2

[node name="Pivot" type="MarginContainer" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page1"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control" type="Control" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page1/Pivot"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AnimatedPrompt" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page1/Pivot/Control" instance=ExtResource("1_ak283")]

[node name="Label3" type="Label" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page1"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2
theme_override_constants/line_spacing = 12
text = "When both players press the correct button, the team gets a point. The point is later converted to score for each player, added at the end of the round. The team with the highest added score wins the round. The losing team suffers a 50% penalty to their round score.
The game ends after 5 rounds. At the end, the player or team with highest score wins!."
autowrap_mode = 2

[node name="Page2" type="VBoxContainer" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page2"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Don't Trust your Teammate

"

[node name="Label1" type="Label" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page2"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2
theme_override_constants/line_spacing = 12
text = "When getting the correct answer, the point usually converts to euql shares for both players. But, by answering with the corresponding Face Button or Arrow Key, a player may defect.
The resulting score gained from a point by both teammates, will depend on their chosen strategy and the payoffs defined in the payoff matrix.
Even if both of you get the answer right, your teammate might end up with more score than you, or you may actually lose score!"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page2"]
layout_mode = 2

[node name="Pivot1" type="MarginContainer" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page2/HBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page2/HBoxContainer/Pivot1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Answer1" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page2/HBoxContainer/Pivot1/Control" instance=ExtResource("2_hci0m")]
unique_name_in_owner = true

[node name="Pivot2" type="MarginContainer" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page2/HBoxContainer/Pivot2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Answer2" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page2/HBoxContainer/Pivot2/Control" instance=ExtResource("2_hci0m")]
unique_name_in_owner = true

[node name="Label2" type="Label" parent="PanelContainer/Display/MarginContainer/VBoxContainer/Pages/Page2"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2
theme_override_constants/line_spacing = 12
text = "Watch out, though. If you get the answer right, you have nothing to fear, but if you get it wrong, it will reveal whether you cooperated or defected to your teammate.
Betray at your own risk."
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Display/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Control" type="Control" parent="PanelContainer/Display/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="PageTurnerLeft" type="Button" parent="PanelContainer/Display/MarginContainer/VBoxContainer/HBoxContainer/Control"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
pivot_offset = Vector2(24, 24)
theme_type_variation = &"PageButtonLeft"

[node name="PageCounter" type="Label" parent="PanelContainer/Display/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "0 / 0"

[node name="Control2" type="Control" parent="PanelContainer/Display/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="PageTurnerRight" type="Button" parent="PanelContainer/Display/MarginContainer/VBoxContainer/HBoxContainer/Control2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
pivot_offset = Vector2(24, 24)
theme_type_variation = &"PageButtonLeft"

[connection signal="pressed" from="PanelContainer/Display/MarginContainer/VBoxContainer/HBoxContainer/Control/PageTurnerLeft" to="." method="_on_page_turner_pressed" binds= [false]]
[connection signal="pressed" from="PanelContainer/Display/MarginContainer/VBoxContainer/HBoxContainer/Control2/PageTurnerRight" to="." method="_on_page_turner_pressed" binds= [true]]
